# python-project-lvl2

./: .coverage  .gitignore  README.md  diff.txt  makefile  pyproject.toml  test0.py
.github/workflows/: on-push-check.yaml  python-app.yml  test-on-push.yaml
gendiff/: __init__.py  core.py
gendiff/dict_comp/: __init__.py  dict_comp.py
gendiff/formatter/: generate_view.py  jsonish.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  generate_view.py  json.py  jsonish.py  plain.py  stringify.py  stylish.py  view_formats.py
gendiff/modules/: __init__.py  dict_compare.py  generate_diff.py  json_parse.py  jsonify.py  parse.py  parse_args.py  plain.py  stringify.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  test0.py
tests/: __init__.py  test_formatter.py  test_gendiff.py  test_gendiff1.py  test_generate_diff.py  test_jsonify1.py  test_plain1.py  test_stylish1.py
tests/fixtures/: argparse_help.txt  file1.json  file1.yaml  file2.json  file2.yaml  json_nested.txt  json_plain.txt  nested_json.txt  nested_plain.txt  nested_stylish.txt  plain_json.txt  view_json.txt  view_plain.txt  view_stylish.txt
