[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "level 2 student project"
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Python Modules"
]

authors = ["Boris Ageyev <mr.broomy@gmail.com>"]
repository = "https://github.com/mr-xeroth/python-project-lvl2"
packages = [
    { include = "gendiff" },
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyyaml = "^5.3"
flake8 = "^4.0"
pytest = "^7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
